etc/kubernetes/ingress/doc-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: doc-main-service
  annotations:
    konghq.com/strip-path: "true"
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /doc-rabbitmq
            pathType: Prefix
            backend:
              service:
                name: doc-rabbitmq
                port:
                  number: 15672

          - path: /doc-keycloak
            pathType: Prefix
            backend:
              service:
                name: doc-keycloak
                port:
                  number: 8180

          - path: /doc-main-service
            pathType: Prefix
            backend:
              service:
                name: doc-main-service
                port:
                  number: 8080
